[project]
name = ""
version = ""
description = ""
authors = [
    {name = "kirovj", email = "546108612@qq.com"},
]
dependencies = [
    "pandas>=1.4.3",
    "lightgbm>=3.3.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
